fix: remove loading icon shift

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1,1 +1,6 @@
 @import 'tailwindcss';
+
+.anticon-spin,
+.anticon-spin::before {
+  display: inline-flex;
+}
